# OOP-Homework-7

./: .dockerignore  2025_ЛР_ООП_7.txt  CMakeLists.txt  Dockerfile  README.md  main.cpp
include/: combat_visitor.h  druid.h  elf.h  game_engine.h  knight.h  npc.h  visitor.h
src/: combat_visitor.cpp  druid.cpp  elf.cpp  factory.cpp  game_engine.cpp  knight.cpp  npc.cpp
tests/: test_arena.cpp  test_combat.cpp  test_data_npcs.txt  test_factory.cpp  test_file_loading.cpp  test_npc.cpp
